--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,10 @@
 {
-	"name": "adldap/adldap",
+	"name": "ilves/adldap",
 	"type": "library",
-	"description": "adLDAP, PHP LDAP library for manipulating Active Directory",
 	"keywords": [
 		"active directory",
 		"ldap",
 		"windows"
-	],
-	"homepage": "http://adldap.sourceforge.net",
-	"license": "LGPL-2.1",
-	"support": {
-		"issues": "https://github.com/adldap/adLDAP/issues",
-		"source": "https://github.com/adldap/adLDAP"
-	},
-	"authors": [
-		{
-			"name": "Richard Hyland",
-			"email": "adldap@richardhyland.com",
-			"role": "Developer"
-		},
-		{
-			"name": "Scott Barnett",
-			"email": "scott@wiggumworld.com",
-			"role": "Developer"
-		}
 	],
 	"require": {
 		"php": ">=5.3.0"
